--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <h2>🚀 SWISTO</h2>
-            </div>
+               <div class="nav-logo">
+    <img src="swisto-logo.png" alt="SWISTO Kenya" style="height: 45px;">
+</div>
             <div class="nav-menu">
                 <a href="#home" class="nav-link">Home</a>
                 <a href="#how-it-works" class="nav-link">How It Works</a>
@@ -195,7 +196,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <p>emergency@swisto.co.ke</p>
+                            <p>henrymwandoe004@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -246,7 +247,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>🚀 SWISTO</h3>
+                  <img src="swisto-logo.png" alt="SWISTO Kenya" style="height: 35px;">
                     <p>Kenya's fastest emergency supply platform for the hospitality industry.</p>
                 </div>
                 <div class="footer-section">
@@ -259,7 +260,7 @@
                 <div class="footer-section">
                     <h4>Contact</h4>
                     <p>+254 794 465 650</p>
-                    <p>info@swisto.co.ke</p>
+                    <p>henrymwandoe004@gmail.com</p>
                     <p>Diani, Kenya</p>
                 </div>
                 <div class="footer-section">
@@ -279,4 +280,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
