--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                <div class="nav-logo">
-    <img src="swisto-logo.png" alt="SWISTO Kenya" style="height: 60px;">
+    <img src="swisto-logo.png" alt="SWISTO Kenya" style="height: 60px;"> mix-blend-mode: multiply;">
 </div>
             <div class="nav-menu">
                 <a href="#home" class="nav-link">Home</a>
@@ -280,6 +280,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
