--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="emergency-card">
                     <h4>🚨 EMERGENCY REQUEST</h4>
                     <p>Get connected to verified suppliers in minutes</p>
-                    <a href="https://wa.me/254712345678?text=Emergency%20supply%20needed" class="btn-whatsapp">
+                    <a href="https://wa.me/254794465650?text=Emergency%20supply%20needed" class="btn-whatsapp">
                         <i class="fab fa-whatsapp"></i> WhatsApp Emergency Line
                     </a>
                 </div>
@@ -299,21 +299,21 @@
                         <i class="fas fa-phone"></i>
                         <div>
                             <h4>Emergency Hotline</h4>
-                            <p>+254 712 345 678</p>
+                            <p>+254 794 465 650</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fab fa-whatsapp"></i>
                         <div>
                             <h4>WhatsApp Business</h4>
-                            <p>+254 712 345 678</p>
+                            <p>+254 794 465 650</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <p>operations@swisto.co.ke</p>
+                            <p>henrymwandoe004@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -403,11 +403,11 @@
                 </div>
                 <div class="footer-section">
                     <h4>Emergency</h4>
-                    <a href="https://wa.me/254712345678" class="emergency-link">
+                    <a href="https://wa.me/254794465650" class="emergency-link">
                         <i class="fab fa-whatsapp"></i> WhatsApp Emergency
                     </a>
                     <p>Available 24/7</p>
-                    <p>+254 712 345 678</p>
+                    <p>+254 794 465 650</p>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -419,3 +419,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
