--- a/supplier-dashboard.html
+++ b/supplier-dashboard.html
@@ -109,9 +109,9 @@
                                 <button class="btn btn-outline btn-small" onclick="openInventoryModal()">
                                     <i class="fas fa-edit"></i> Update All
                                 </button>
-                                <button class="btn btn-primary btn-small" onclick="addNewProduct()">
-                                    <i class="fas fa-plus"></i> Add Product
-                                </button>
+                                <a href="add-product.html" class="btn btn-primary btn-small">
+    <i class="fas fa-plus"></i> Add Product
+</a>
                             </div>
                         </div>
                         
@@ -605,3 +605,4 @@
     </style>
 </body>
 </html>
+
