--- a/supplier-dashboard.html
+++ b/supplier-dashboard.html
@@ -746,3 +746,15 @@
     </style>
 </body>
 </html>
+<!-- Add this to the right column of your dashboard -->
+<div class="dashboard-card-light" style="background: white; padding: 2.5rem; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
+    <div class="card-header-light" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 2rem; padding-bottom: 1rem; border-bottom: 1px solid #E2E8F0;">
+        <h3 style="color: #1E293B; display: flex; align-items: center; gap: 0.75rem; margin: 0;">
+            <i class="fas fa-shopping-cart" style="color: var(--primary);"></i> Recent Orders
+        </h3>
+        <a href="orders.html" class="btn btn-outline btn-small">View All</a>
+    </div>
+    <div id="recentOrdersList">
+        <!-- Recent orders will be loaded here -->
+    </div>
+</div>
