supplier-dashboard.html

--- a/supplier-dashboard.html
+++ b/supplier-dashboard.html
@@ -16,12 +16,12 @@
                 <span style="margin-left: 10px; font-weight: 600; color: #333;">Supplier Dashboard</span>
             </div>
             <div class="nav-menu">
-                <a href="#overview" class="nav-link active"><i class="fas fa-chart-pie"></i> Overview</a>
-                <a href="#orders" class="nav-link"><i class="fas fa-shopping-cart"></i> Orders</a>
-                <a href="#inventory" class="nav-link"><i class="fas fa-boxes"></i> Inventory</a>
-                <a href="#invoices" class="nav-link"><i class="fas fa-file-invoice"></i> Invoices</a>
-                <a href="#performance" class="nav-link"><i class="fas fa-trophy"></i> Performance</a>
-            </div>
+    <a href="#overview" class="nav-link active"><i class="fas fa-chart-pie"></i> Overview</a>
+    <a href="orders.html" class="nav-link"><i class="fas fa-shopping-cart"></i> Orders</a>
+    <a href="#inventory" class="nav-link"><i class="fas fa-boxes"></i> Inventory</a>
+    <a href="add-product.html" class="nav-link"><i class="fas fa-cube"></i> Products</a>
+    <a href="#performance" class="nav-link"><i class="fas fa-trophy"></i> Performance</a>
+</div>
             <div class="nav-user">
                 <span class="user-name">Nakuru Supplies Ltd</span>
                 <div class="user-avatar" style="background: var(--secondary); color: white;">
@@ -758,3 +758,4 @@
         <!-- Recent orders will be loaded here -->
     </div>
 </div>
+
