add-product.html

--- a/add-product.html
+++ b/add-product.html
@@ -680,3 +680,15 @@ function saveProductToStorage(productData) {
 </body>
 
 </html>
+<!-- In add-product.html -->
+<nav class="navbar">
+    <div class="nav-container">
+        <div class="nav-logo">
+            <a href="supplier-dashboard.html" style="display: flex; align-items: center; text-decoration: none;">
+                <img src="swisto-logo.png" alt="SWISTO Kenya">
+                <span style="margin-left: 10px; font-weight: 600; color: #333;">Supplier Dashboard</span>
+            </a>
+        </div>
+        <!-- Rest of navigation remains the same -->
+    </div>
+</nav>
