--- a/orders.html
+++ b/orders.html
@@ -963,3 +963,15 @@
     </script>
 </body>
 </html>
+<!-- In orders.html -->
+<nav class="navbar">
+    <div class="nav-container">
+        <div class="nav-logo">
+            <a href="supplier-dashboard.html" style="display: flex; align-items: center; text-decoration: none;">
+                <img src="swisto-logo.png" alt="SWISTO Kenya">
+                <span style="margin-left: 10px; font-weight: 600; color: #333;">Supplier Dashboard</span>
+            </a>
+        </div>
+        <!-- Rest of navigation remains the same -->
+    </div>
+</nav>
