--- a/index.html
+++ b/index.html
@@ -419,3 +419,14 @@
     <script src="script.js"></script>
 </body>
 </html>
+<!-- In index.html -->
+<nav class="navbar">
+    <div class="nav-container">
+        <div class="nav-logo">
+            <a href="index.html" style="display: flex; align-items: center; text-decoration: none;">
+                <img src="swisto-logo.png" alt="SWISTO Kenya">
+            </a>
+        </div>
+        <!-- Rest of navigation remains the same -->
+    </div>
+</nav>
