hotel-ordering.html

--- a/hotel-ordering.html
+++ b/hotel-ordering.html
@@ -974,3 +974,15 @@
     </script>
 </body>
 </html>
+<!-- In hotel-ordering.html and other hotel pages -->
+<nav class="navbar">
+    <div class="nav-container">
+        <div class="nav-logo">
+            <a href="hotel-dashboard.html" style="display: flex; align-items: center; text-decoration: none;">
+                <img src="swisto-logo.png" alt="SWISTO Kenya">
+                <span style="margin-left: 10px; font-weight: 600; color: #333;">Hotel Portal</span>
+            </a>
+        </div>
+        <!-- Rest of navigation remains the same -->
+    </div>
+</nav>
