--- a/supplier-dashboard.html
+++ b/supplier-dashboard.html
@@ -4,247 +4,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Supplier Dashboard - SWISTO</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
-<body class="dashboard-page">
+<body>
+    <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
                 <a href="index.html">
-                    <img src="images/swisto-logo.png" alt="SWISTO Kenya">
+                    <img src="swisto-logo.png" alt="SWISTO Kenya">
                 </a>
             </div>
             <div class="nav-menu">
-                <a href="supplier-dashboard.html" class="nav-link active">Dashboard</a>
-                <a href="add-product.html" class="nav-link">Add Products</a>
-                <a href="orders.html" class="nav-link">Orders</a>
-                <a href="index.html#contact" class="nav-link">Support</a>
-                <div class="nav-user">
-                    <span class="user-name">Supplier Account</span>
-                    <a href="index.html" class="btn btn-outline btn-small">Logout</a>
-                </div>
-            </div>
-            <div class="nav-toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="#" class="nav-link" onclick="logout()">Logout</a>
             </div>
         </div>
     </nav>
 
+    <!-- Supplier Dashboard -->
     <section class="dashboard-section">
         <div class="container">
             <div class="dashboard-header">
-                <div>
-                    <h1>Supplier Dashboard</h1>
-                    <p>Manage your inventory and fulfill hotel orders efficiently.</p>
+                <h1>Supplier Dashboard</h1>
+                <p>Welcome back! Manage your products and orders.</p>
+            </div>
+
+            <div class="dashboard-grid">
+                <div class="dashboard-card">
+                    <i class="fas fa-boxes"></i>
+                    <h3>Product Management</h3>
+                    <p>Manage your product catalog and stock levels</p>
+                    <a href="products.html" class="btn btn-outline">Manage Products</a>
                 </div>
-                <div class="emergency-panel">
-                    <h3><i class="fas fa-bell"></i> Active Emergency Requests</h3>
-                    <p>2 urgent orders waiting for confirmation</p>
-                    <a href="orders.html" class="btn btn-emergency">View Requests</a>
+
+                <div class="dashboard-card">
+                    <i class="fas fa-shopping-cart"></i>
+                    <h3>Orders</h3>
+                    <p>View and process customer orders</p>
+                    <a href="supplier-orders.html" class="btn btn-outline">View Orders</a>
+                </div>
+
+                <div class="dashboard-card">
+                    <i class="fas fa-bell"></i>
+                    <h3>Emergency Requests</h3>
+                    <p>Respond to urgent hotel needs</p>
+                    <a href="supplier-requests.html" class="btn btn-outline">View Requests</a>
+                </div>
+
+                <div class="dashboard-card">
+                    <i class="fas fa-chart-line"></i>
+                    <h3>Analytics</h3>
+                    <p>View your business performance</p>
+                    <a href="analytics.html" class="btn btn-outline">View Analytics</a>
                 </div>
             </div>
 
+            <!-- Quick Stats -->
             <div class="stats-grid">
                 <div class="stat-card">
-                    <div class="stat-icon pending">
-                        <i class="fas fa-clock"></i>
-                    </div>
-                    <div class="stat-info">
-                        <h3>Pending Orders</h3>
-                        <div class="stat-number">5</div>
-                    </div>
+                    <h4>Pending Orders</h4>
+                    <div class="stat-number">5</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-icon confirmed">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                    <div class="stat-info">
-                        <h3>Today's Orders</h3>
-                        <div class="stat-number">12</div>
-                    </div>
+                    <h4>Products Listed</h4>
+                    <div class="stat-number">23</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-icon delivered">
-                        <i class="fas fa-truck"></i>
-                    </div>
-                    <div class="stat-info">
-                        <h3>Delivered Today</h3>
-                        <div class="stat-number">8</div>
-                    </div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-icon budget">
-                        <i class="fas fa-money-bill-wave"></i>
-                    </div>
-                    <div class="stat-info">
-                        <h3>Today's Revenue</h3>
-                        <div class="stat-number">KSh 42,500</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="dashboard-main">
-                <div class="dashboard-column">
-                    <div class="dashboard-card">
-                        <div class="card-header">
-                            <h3><i class="fas fa-boxes"></i> Inventory Overview</h3>
-                            <a href="add-product.html" class="btn btn-primary btn-small">Add Product</a>
-                        </div>
-                        <div class="inventory-grid">
-                            <div class="inventory-item">
-                                <div class="inventory-header">
-                                    <span>Food Items</span>
-                                    <span class="stock-level high">In Stock</span>
-                                </div>
-                                <div class="stock-amount">45 Items</div>
-                                <div class="stock-warning">Well stocked</div>
-                            </div>
-                            <div class="inventory-item">
-                                <div class="inventory-header">
-                                    <span>Cleaning Supplies</span>
-                                    <span class="stock-level medium">Low Stock</span>
-                                </div>
-                                <div class="stock-amount">8 Items</div>
-                                <div class="stock-warning urgent">Reorder needed</div>
-                            </div>
-                            <div class="inventory-item">
-                                <div class="inventory-header">
-                                    <span>Beverages</span>
-                                    <span class="stock-level high">In Stock</span>
-                                </div>
-                                <div class="stock-amount">32 Items</div>
-                                <div class="stock-warning">Well stocked</div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="dashboard-card">
-                        <div class="card-header">
-                            <h3><i class="fas fa-tasks"></i> Recent Orders</h3>
-                            <a href="orders.html" class="btn btn-outline btn-small">View All</a>
-                        </div>
-                        <div class="orders-list">
-                            <div class="order-item">
-                                <div class="order-info">
-                                    <strong>Beach Resort Diani</strong>
-                                    <span>Emergency: Food Supplies</span>
-                                    <small>Order #SW-001245 | 15 min ago</small>
-                                </div>
-                                <div class="order-details">
-                                    <span class="order-status pending">Pending</span>
-                                    <div class="order-price">KSh 18,200</div>
-                                </div>
-                            </div>
-                            <div class="order-item">
-                                <div class="order-info">
-                                    <strong>Serena Hotel</strong>
-                                    <span>Cleaning Materials</span>
-                                    <small>Order #SW-001244 | 1 hour ago</small>
-                                </div>
-                                <div class="order-details">
-                                    <span class="order-status confirmed">Confirmed</span>
-                                    <div class="order-price">KSh 12,500</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="dashboard-column">
-                    <div class="dashboard-card">
-                        <div class="card-header">
-                            <h3><i class="fas fa-chart-line"></i> Performance</h3>
-                        </div>
-                        <div class="performance-stats">
-                            <div class="performance-item">
-                                <div class="performance-metric">
-                                    <div class="metric-value">94%</div>
-                                    <div class="metric-label">Order Completion Rate</div>
-                                </div>
-                                <div class="performance-stars">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star-half-alt"></i>
-                                </div>
-                            </div>
-                            <div class="performance-item">
-                                <div class="performance-metric">
-                                    <div class="metric-value">28min</div>
-                                    <div class="metric-label">Avg. Response Time</div>
-                                </div>
-                            </div>
-                            <div class="performance-item">
-                                <div class="performance-metric">
-                                    <div class="metric-value">156</div>
-                                    <div class="metric-label">Total Orders This Month</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="dashboard-card">
-                        <div class="card-header">
-                            <h3><i class="fas fa-truck"></i> Active Deliveries</h3>
-                        </div>
-                        <div class="deliveries-list">
-                            <div class="delivery-item">
-                                <div class="delivery-info">
-                                    <strong>Pineapple Resort</strong>
-                                    <span>Beverage Order</span>
-                                </div>
-                                <div class="delivery-status">
-                                    <span class="status-badge on-the-way">On the way</span>
-                                    <span class="delivery-time">ETA: 15 min</span>
-                                </div>
-                            </div>
-                            <div class="delivery-item">
-                                <div class="delivery-info">
-                                    <strong>Coastal Hotel</strong>
-                                    <span>Food Supplies</span>
-                                </div>
-                                <div class="delivery-status">
-                                    <span class="status-badge preparing">Preparing</span>
-                                    <span class="delivery-time">Ready in: 25 min</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="dashboard-card">
-                        <div class="card-header">
-                            <h3><i class="fas fa-wallet"></i> Revenue Overview</h3>
-                        </div>
-                        <div class="revenue-overview">
-                            <div class="revenue-total">
-                                <div class="revenue-amount">KSh 425,800</div>
-                                <div class="revenue-label">Monthly Revenue</div>
-                            </div>
-                            <div class="revenue-breakdown">
-                                <div class="revenue-item">
-                                    <span>Today</span>
-                                    <strong>KSh 42,500</strong>
-                                </div>
-                                <div class="revenue-item">
-                                    <span>This Week</span>
-                                    <strong>KSh 198,300</strong>
-                                </div>
-                                <div class="revenue-item">
-                                    <span>Pending Payments</span>
-                                    <strong>KSh 65,200</strong>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <h4>This Month's Revenue</h4>
+                    <div class="stat-number">KSh 45,200</div>
                 </div>
             </div>
         </div>
     </section>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
+    <script>
+        function logout() {
+            if(confirm('Are you sure you want to logout?')) {
+                window.location.href = 'index.html';
+            }
+        }
+    </script>
 </body>
 </html>
